# RenameIncludeHierarcy

./: CMakeLists.txt  file1.cpp
dir1/: file11.c  header.h  header12.h
dir2/: file21.cpp  header21.h
